\name{NEWS}

\title{News for Package 'specL'}
\newcommand{\ghpr}{\href{https://github.com/protViz/specL/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/protViz/specL/issues/#1}{##1}}

\section{CHANGES UNTIL VERSION 1.9.15 (2017-04-21)}{
\itemize{
  \item added \CRANpkg{prozor} \code{(>= 0.2.2)} to the Suggest list.
  \item added more specific R package version numbers in DESCRIPTION file.
  \item in \code{plot.specLSet} (normalized RT versus RT) use \code{pch=16}
  and color with parameter \code{alpha=0.1}. 
  \item fixed issue \ghit{22} by including the iRTs in the ionlibrary; \code{LIB <- genSwathIonLib(data=peptideStd, data.fit=peptideStd.redundant); LIB@input.parameter$iRTpeptides}.
  \item fixed issue \ghit{19}.
  \item removed \code{par} command in specLset plot function.
  \item added \code{vignettes/report.Rmd} file, 
  see also \url{http://bioconductor.org/packages/devel/bioc/vignettes/specL/inst/doc/report.html}.
  }
}


\section{CHANGES IN VERSION 1.7.4 (2016-05-19)}{
  \itemize{
  \item USER VISIBLE CHANGES
    \itemize{
    \item added to \code{specLSet} summary "which std peptides (iRTs) where found in which raw files"
    \item one plot per raw file in plot methode of specLSet object
    }
  }
}

\section{CHANGES IN VERSION 1.7.1 (2016-05-13)}{
  \itemize{
  \item USER VISIBLE CHANGES
    \itemize{
    \item replaced NEWS by NEWS.Rd file
    \item modified specL object /replace decoy by score attribute \ghit{1},\ghit{4}
    \item specL on BioC 3.3
    }
  }
}


\section{CHANGES IN VERSION 1.5.10-13}{
  \itemize{
  \item USER UNVISIBLE CHANGES
    \itemize{
    \item added specLSet class support for cdsw methode
    \item changed Rmd5 vignette style
    \item added cdsw test case
    \item intro new vignette for cdsw method \url{http://bioconductor.org/packages/release/bioc/vignettes/specL/inst/doc/cdsw.html}
    }
  }
}

\section{CHANGES IN VERSION 1.5.9}{
    \itemize{
\item USER UNVISIBLE CHANGES
    \itemize{