@@ -4,6 +4,12 @@
 \newcommand{\ghpr}{\href{https://github.com/protViz/specL/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/protViz/specL/issues/#1}{##1}}
 
+\section{CHANGES UNTIL VERSION 1.13.02 (2017-11-20)}{
+\itemize{
+	\item Eliminated C++-11 and Rcpp linking. Passing unit tests.
+	\item use \code{lower_bound_} function exported by \url(https://cran.r-project.org/package=protViz)
+}
+}
 \section{CHANGES UNTIL VERSION 1.9.15 (2017-04-21)}{
 \itemize{
   \item added \CRANpkg{prozor} \code{(>= 0.2.2)} to the Suggest list.
